force-app/main/default/objects/ShadowExposure__c/ShadowExposure__c.object-meta.xml
<CustomObject>
    <description>Shadow exposure</description>
    <label>Exposure</label>
    <nameField>
        <displayFormat>SE-{000000}</displayFormat>
        <label>Exposure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exposures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>