force-app/main/default/objects/ShadowExposure__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Exposures by Claim</relationshipLabel>
    <relationshipName>ShadowExposuresByClaim</relationshipName>
    <type>Lookup</type>
</CustomField>