force-app/main/default/objects/ShadowExposure__c/fields/Claimant__c.field-meta.xml
<CustomField>
    <fullName>Claimant__c</fullName>
    <formula>Exposure__r.Claimant__r.FirstName + &quot; &quot; + Exposure__r.Claimant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimant</label>
    <type>Text</type>
</CustomField>