force-app/main/default/objects/ShadowExposure__c/fields/Exposure__c.field-meta.xml
<CustomField>
    <fullName>Exposure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exposure</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Shadow Exposures By Exposure</relationshipLabel>
    <relationshipName>ShadowExposuresByExposure</relationshipName>
    <type>Lookup</type>
</CustomField>