force-app/main/default/objects/ShadowExposure__c/fields/Exposure_Type__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Type__c</fullName>
    <formula>ExposureType__r.L_EN_CA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exposure Type</label>
    <type>Text</type>
</CustomField>