force-app/main/default/objects/ShadowExposure__c/fields/ExposureId__c.field-meta.xml
<CustomField>
    <fullName>ExposureId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Exposure Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>