force-app/main/default/objects/ShadowExposure__c/fields/ExposureType__c.field-meta.xml
<CustomField>
    <fullName>ExposureType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exposure Type</label>
    <referenceTo>ExposureType__c</referenceTo>
    <relationshipLabel>ShadowExposuresByType</relationshipLabel>
    <relationshipName>ShadowExposuresByType</relationshipName>
    <type>Lookup</type>
</CustomField>