force-app/main/default/objects/ShadowExposure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exposure__c</columns>
    <columns>ExposureType__c</columns>
    <columns>Claim__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>